fixup! exclude new io.airlift.log-manager

--- a/flink-filesystems/flink-s3-fs-presto/pom.xml
+++ b/flink-filesystems/flink-s3-fs-presto/pom.xml
@@ -135,6 +135,10 @@ under the License.
 					<artifactId>aircompressor</artifactId>
 				</exclusion>
 				<exclusion>
+					<groupId>io.airlift</groupId>
+					<artifactId>log-manager</artifactId>
+				</exclusion>
+				<exclusion>
 					<groupId>javax.inject</groupId>
 					<artifactId>javax.inject</artifactId>
 				</exclusion>
